--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Install Terraform
+        uses: hashicorp/setup-terraform@v3
       - name: Install dependencies
         run: |
           pip install -r requirements.txt || true
@@ -49,4 +51,4 @@ jobs:
       - name: Terraform Apply
         run: |
           terraform init
-          terraform apply -auto-approve -var="dashboard_image=<account-id>.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
+          terraform apply -auto-approve -var="dashboard_image=<account-id>.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -var-file=envs/dev/terraform.tfvars
