fixed var issue for ecr

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Terraform Init & Validate
         run: |
           # Clean any local state that might interfere
-          rm -f .terraform/terraform.tfstate .terraform/terraform.tfstate.backup
+          rm -rf .terraform/
           
           # Initialize with proper backend config
           terraform init \
@@ -81,25 +81,35 @@ jobs:
         run: |
           docker push $AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}
 
+      - name: Check and prepare ECR repository
+        run: |
+          # Check if ECR repository exists
+          echo "Checking if ECR repository exists..."
+          if ! aws ecr describe-repositories --repository-names analytics-dashboard --region ap-south-1 >/dev/null 2>&1; then
+            echo "ECR repository does not exist, creating it manually..."
+            aws ecr create-repository --repository-name analytics-dashboard --region ap-south-1
+          else
+            echo "ECR repository already exists"
+          fi
+
       - name: Terraform Apply
         run: |
+          # Remove any stale terraform files
+          rm -rf .terraform/
+          rm -f terraform.tfstate*
+          
           # Ensure we have the latest state before proceeding
           terraform init \
             -backend-config="bucket=customer-feedback-terraform-state" \
             -backend-config="key=${ENVIRONMENT}/terraform.tfstate" \
             -backend-config="region=ap-south-1" \
             -backend-config="dynamodb_table=terraform-locks" \
-            -input=false -force-copy
+            -input=false -force-copy -reconfigure
           
-          # First import the ECR repository if it exists but isn't in the state
-          echo "Checking if ECR repository exists and needs importing..."
-          if aws ecr describe-repositories --repository-names analytics-dashboard --region ap-south-1 >/dev/null 2>&1; then
-            echo "ECR repository exists, attempting to import if not already in state..."
-            terraform import aws_ecr_repository.dashboard analytics-dashboard || echo "Import not needed or failed - continuing"
-          fi
+          # Run a targeted plan excluding ECR to avoid errors
+          echo "Running targeted plan..."
+          terraform plan -target="module.lambda_api_gateway" -target="module.api_gateway_stage" -target="module.dynamodb_feedback" -target="module.event_alerting" -target="module.cloudwatch_monitoring" -target="module.cicd_pipeline" -target="module.analytics_dashboard" -target="module.iam_lambda_role" -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -var-file=${TFVARS_FILE}
           
-          # Refresh state to ensure it matches reality
-          terraform refresh -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -var-file=${TFVARS_FILE}
-          
-          # Plan and apply with proper locking using DynamoDB
+          # Now run the apply with all required variables
+          echo "Running full apply..."
           terraform apply -auto-approve -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -var-file=${TFVARS_FILE}
