--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,9 +72,16 @@ jobs:
           if ! aws ecr describe-repositories --repository-names analytics-dashboard --region ap-south-1 >/dev/null 2>&1; then
             echo "ECR repository does not exist, creating it manually..."
             aws ecr create-repository --repository-name analytics-dashboard --region ap-south-1
+            # Add a delay to ensure the repository is fully created and available
+            echo "Waiting 10 seconds for repository to become fully available..."
+            sleep 10
           else
             echo "ECR repository already exists"
           fi
+          
+          # Verify that the repository is accessible
+          echo "Verifying repository access..."
+          aws ecr describe-repositories --repository-names analytics-dashboard --region ap-south-1
           
       - name: Log in to Amazon ECR
         run: |
@@ -131,12 +138,25 @@ jobs:
             -backend-config="region=ap-south-1" \
             -backend-config="dynamodb_table=terraform-locks" \
             -input=false -force-copy -reconfigure
+            
+          # Check if the ECR repository exists in AWS first
+          echo "Verifying repository exists in AWS..."
+          if ! aws ecr describe-repositories --repository-names analytics-dashboard --region ap-south-1 >/dev/null 2>&1; then
+            echo "WARNING: ECR repository doesn't exist in AWS yet, will be created during apply"
+            exit 0 # Exit successfully, as we'll create it during apply
+          fi
           
           # Check if the repository is already in state
           if ! terraform state list | grep -q "aws_ecr_repository.dashboard"; then
             echo "ECR repository not in Terraform state, importing it..."
             # Try to import the repository into state
-            terraform import aws_ecr_repository.dashboard analytics-dashboard || echo "Import failed, will be created during apply"
+            if terraform import -input=false aws_ecr_repository.dashboard analytics-dashboard; then
+              echo "Import successful"
+            else 
+              echo "Import failed, but repository exists. Will attempt to create during apply."
+              # Generate a state conflict error report to help debug
+              terraform plan -input=false -refresh-only || true
+            fi
           else
             echo "ECR repository already in Terraform state"
           fi
@@ -158,14 +178,28 @@ jobs:
             -backend-config="region=ap-south-1" \
             -backend-config="dynamodb_table=terraform-locks" \
             -input=false -force-copy -reconfigure
-            
-          # Set default image value to avoid prompt
-          export TF_VAR_dashboard_image="$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
-            
-          # Run a plan with no lock to avoid any locking issues
-          echo "Running plan..."
-          terraform plan -lock=false -input=false -var-file=${TFVARS_FILE}
           
-          # Now run the apply with all required variables, with lock disabled to avoid locking issues
+          # Set dashboard image in environment variable and verify it's set
+          export TF_VAR_dashboard_image="$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
+          echo "Using dashboard image: $TF_VAR_dashboard_image"
+          
+          # Create tfvars files with the image variable explicitly set
+          echo "dashboard_image = \"$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}\"" > temp_vars.tfvars
+          echo "Created temp_vars.tfvars with content:"
+          cat temp_vars.tfvars
+          
+          # Generate terraform.auto.tfvars as well (automatically loaded)
+          echo "dashboard_image = \"$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}\"" > terraform.auto.tfvars
+          
+          # Run a plan with paranoid variable handling
+          echo "Running plan..."
+          terraform plan -lock=false -input=false -var-file=${TFVARS_FILE} -var-file=temp_vars.tfvars -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -out=tfplan
+          
+          # Now run apply using the plan file to ensure no prompting
           echo "Running apply..."
-          terraform apply -auto-approve -lock=false -input=false -var-file=${TFVARS_FILE}
+          if terraform apply -auto-approve -input=false tfplan; then
+            echo "Apply from plan file succeeded"
+          else
+            echo "Apply from plan failed, trying direct apply..."
+            terraform apply -auto-approve -lock=false -input=false -var-file=${TFVARS_FILE} -var-file=temp_vars.tfvars -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
+          fi
