--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -41,23 +41,13 @@ jobs:
 
       - name: Terraform Init & Validate
         run: |
-          # Clean any local state that might interfere
-          rm -rf .terraform/
-          
-          # Initialize with proper backend config
           terraform init \
             -backend-config="bucket=customer-feedback-terraform-state" \
             -backend-config="key=${ENVIRONMENT}/terraform.tfstate" \
             -backend-config="region=ap-south-1" \
             -backend-config="dynamodb_table=terraform-locks" \
             -input=false -force-copy
-          
-          # Validate configuration
           terraform validate
-          
-          # Show current state
-          echo "Current state resources:"
-          terraform state list || echo "No state or unable to list state"
 
       - name: Run tests
         run: |
@@ -103,25 +93,13 @@ jobs:
           
 
 
-      - name: Terraform Apply
+      - name: Terraform Plan & Apply
         run: |
-          # Set dashboard image in environment variable and verify it's set
           export TF_VAR_dashboard_image="$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
           echo "Using dashboard image: $TF_VAR_dashboard_image"
-          # Create tfvars files with the image variable explicitly set
           echo "dashboard_image = \"$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}\"" > temp_vars.tfvars
           echo "Created temp_vars.tfvars with content:"
           cat temp_vars.tfvars
-          # Generate terraform.auto.tfvars as well (automatically loaded)
           echo "dashboard_image = \"$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}\"" > terraform.auto.tfvars
-          # Run a plan with paranoid variable handling
-          echo "Running plan..."
           terraform plan -lock=false -input=false -var-file=${TFVARS_FILE} -var-file=temp_vars.tfvars -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}" -out=tfplan
-          # Now run apply using the plan file to ensure no prompting
-          echo "Running apply..."
-          if terraform apply -auto-approve -input=false tfplan; then
-            echo "Apply from plan file succeeded"
-          else
-            echo "Apply from plan failed, trying direct apply..."
-            terraform apply -auto-approve -lock=false -input=false -var-file=${TFVARS_FILE} -var-file=temp_vars.tfvars -var="dashboard_image=$AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com/analytics-dashboard:${{ github.sha }}"
-          fi
+          terraform apply -auto-approve -input=false tfplan
