--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -80,6 +80,15 @@ jobs:
           else
             echo "ECR repository already in Terraform state."
           fi
+      - name: Check and import Lambda if needed
+        run: |
+          echo "Checking if analytics_summary Lambda is in Terraform state..."
+          if ! terraform state list -var-file=${TFVARS_FILE} | grep -q "module.lambda_api_gateway.aws_lambda_function.analytics_summary"; then
+            echo "Lambda not in Terraform state, importing..."
+            terraform import -var-file=${TFVARS_FILE} module.lambda_api_gateway.aws_lambda_function.analytics_summary analytics-summary-dev || echo "Import failed or not needed."
+          else
+            echo "Lambda already in Terraform state."
+          fi
       - name: Log in to Amazon ECR
         run: |
           aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.ap-south-1.amazonaws.com
